<resources>

    <!-- Nom de l'app -->
    <string name="app_name">Sudri\'Eat</string>


    <!-- Textes de l'app -->

    <!-- Page d'acceuil -->
    <string name="texte_accueil1">"Sudri'Eat"</string>
    <string name="texte_accueil2">"Commandez en toute simplicité !"</string>


    <!-- Page Home -->
    <string name="texte_presentation_accueil0">"L'application officielle du Foyer Sudriens Du Monde"</string>
    <string name="texte_de_presentation_accueil">"Sudriens Du Monde est une association humanitaire créée au sein de l'école d'ingénierie ESME Sudria. Fondée en 2021 par Paul Sion, SDM regroupe aujourd'hui 30 bénévoles."</string>
    <string name="texte_de_presentation_accueil2">"Nous avons réalisé quelques actions depuis le début de l'année comme par exemple la création d'un foyer, la participation à la semaine de campagne du Sidaction, etc..."</string>
    <string name="texte_de_presentation_accueil3">"Notre partenaire principale est AturAfrica avec lequel il sera possible aux membres de SDM de partir au Sénégal afin de réaliser des missions d'aides à l'éducation dans des villages."</string>

    <!-- Page Infos -->
    <string name="titre">"Tout ce qu'il y a à savoir est ici !"</string>
    <string name="utiliser_app1">"Pour réaliser une commande il n'y a rien de plus simple !"</string>
    <string name="utiliser_app2">"Allez dans l'onglet 'Nos Produits'."</string>
    <string name="utiliser_app3">"Ensuite remplissez votre panier selon vos envies à l'aide des boutons '+' et '-'..."</string>
    <string name="utiliser_app4">"...et une fois vos envies assouvies, cliquez sur 'Voir panier' pour avoir accès à un récapitulatif et valider votre panier !"</string>


    <!-- Page Cookie Clicker -->
    <string name="titre_cookie">Cookie Clicker</string>
    <string name="points">Nombre de clics: 0</string>


    <!-- Bouttons de l'app -->

    <!-- Page Home -->
    <string name="bouton_commandes">Faire une Commande</string>
    <string name="bouton_produits">Nos Produits</string>


    <!-- Page Infos -->
    <string name="bouton_jeu_cookie">Lancer un Mini-jeu</string>


    <!-- Page Cookie -->
    <string name="boutton_retour">Retour</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>