<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CookieActivity"
    android:background="@drawable/background_cookie">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titre_cookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/titre_cookie"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/cookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/cookie" />

        <TextView
            android:id="@+id/nbrclics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/bouton_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutton_retour"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</RelativeLayout>